ecmascript/parser/tests/typescript-errors/tsc/externalModules/topLevelAwaitNonModule/input.ts.stderr
error: top level await requires target to es2017 or higher and topLevelAwait:true for ecmascript
 --> $DIR/tests/typescript-errors/tsc/externalModules/topLevelAwaitNonModule/input.ts:3:1
  |
3 | await x;
  | ^^^^^

